fixed overflowing elements

--- a/src/Components/Home/HomeMain.module.scss
+++ b/src/Components/Home/HomeMain.module.scss
@@ -10,7 +10,7 @@ $font_sub_heading: 'Pacifico', serif;
     top: 0%;
     width: 90%;
     height: 100vh;
-    margin: 20% 5% 0 15%;
+    margin: 40% 5% 0 15%;
 }
 
 .home .heading {
@@ -24,7 +24,7 @@ $font_sub_heading: 'Pacifico', serif;
 .home .sub_heading {
     text-align: center;
     font-family: $font_sub_heading;
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 24px;
     font-weight: 300;
 }
@@ -32,7 +32,7 @@ $font_sub_heading: 'Pacifico', serif;
 .home .description {
     width: 90%;
     text-align: justify;
-    margin: 30px 0 0 20px;
+    margin: 50px 0 0 20px;
     font-size: 18px;
     font-family: $font_heading;
     font-weight: 400;
@@ -49,11 +49,13 @@ $font_sub_heading: 'Pacifico', serif;
 .button {
     display: inline-block;
     width: 70%;
-    margin: 50px 15%;
-    padding: 14px 0 12px;
+    height: 60px;
+    margin: 60px 15%;
+    padding: 12px 0 12px;
     background-color: #facf0f;
     color: #333;
     font-family: $font_heading;
+    font-size: 18px;
     font-weight: 700;
     text-transform: uppercase;
     border: none;
