--- a/src/Components/Work/WorkMain.module.scss
+++ b/src/Components/Work/WorkMain.module.scss
@@ -17,7 +17,7 @@ $font_sub_heading: 'Pacifico', serif;
 }
 
 .work h2 {
-    width: 150%;
+    width: 110%;
     text-align: left;
     font-family: $font_sub_heading;
     font-size: 36px;
